# sky-route12

./: Dockerfile  README.md  cleanup_remote.py  hf_upload.mjs  hf_upload.ps1  inference.py  openenv.yaml  pyproject.toml  requirements.txt  upload_script.py
drone22111/: drone_dashboard.py  drone_env.py  netlify.toml  pyproject.toml  requirements.txt  tasks.py
drone22111/drone_backup/: drone_env1.py  train_agent.py
drone22111/email_triage_env/: README.md  api.py  requirements.txt
drone22111/frontend/: app.js  index.html
sky-route12-main/skyroute/: README.md  openenv.yaml  pyproject.toml  requirements.txt
sky-route12-main/skyroute/drone_backup/: api.py
sky-route12-main/skyroute/frontend/: style.css
sky-route12-main/skyroute/legacy/: openenv.yaml  verify_env.py
sky-route12-main/skyroute/legacy/email_triage_env/: Dockerfile  baseline.py
sky-route12-main/skyroute/server/: app.py  drone_dashboard.py  graders.py
skyroute/: cleanup_remote.py  inference.py  openenv.yaml  push_to_github.py  requirements.txt  test_proxy.py  upload_script.py
skyroute/drone_backup/: Dockerfile  inference.py  requirements.txt  test_env.py
skyroute/frontend/: app.js
skyroute/legacy/: simulated_run.py
skyroute/legacy/email_triage_env/: email_env.py  simulated_run.py  test_api_call.py  verify_env.py
skyroute/server/: drone_dashboard.py
