[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "skyroute-drone-openenv"
version = "1.0.0"
description = "SkyRoute Drone AI mission control and path planning compliant with OpenEnv."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "fastapi",
    "uvicorn",
    "openai",
    "python-dotenv",
    "gymnasium==0.28.1",
    "numpy==1.24.3",
    "flask",
    "flask-cors",
    "stable-baselines3>=2.0.0",
    "shimmy>=0.2.1",
    "openenv-core>=0.2.0",
    "huggingface_hub",
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = ["pytest"]
